--- a/actividad3.html
+++ b/actividad3.html
@@ -5,7 +5,7 @@
 
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 <meta content="Sitio web OVI" name="description">
-<meta content="Grupo 21" name="author">
+<meta content="Daniela Sierra" name="author">
 <meta content="unad, OVI, web" name="keywords">
 
 <title>Sitio Web OVI - Actividad 3</title>
@@ -22,8 +22,7 @@
 
 <header>
 <h1> Sitio Web - OVI </h1>
-<h2> Grupo 21 </h2>
-
+<h2>Silvia Daniela Sierra</h2>
 </header>
 
 <nav>
