--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 <meta content="Sitio web OVI" name="description">
-<meta content="Grupo 21" name="author">
+<meta content="Daniela Sierra" name="author">
 <meta content="unad, OVI, web" name="keywords">
 
 <title>Sitio Web OVI</title>
@@ -20,24 +20,22 @@
 <div id="contenedor">
 
 
-
 <header>
 <h1> Sitio Web - OVI </h1>
-<h2> Grupo 21 </h2>
 
 </header>
 <nav>
 
 	<ul id="menu" name="menu">
-    	<li><a class="menu" href="index.html">Inicio</a></li>
-       	<li><a class="menu" href="lecturas.html">Lecturas</a></li>
+    	<li><a class="menu" style="color:#005883" href="index.html">Inicio</a></li>
+       	<li><a class="menu" style="color:#005883" href="lecturas.html">Lecturas</a></li>
        	<li><a class="menu" style="color:#005883" href="multimedia.html">Multimedia</a>
         <ul>
 			<li><a style="color:#FFF" class="menu" href="multimedia1.html">Multimedia 1</a></li>
 			<li><a style="color:#FFF" class="menu" href="multimedia2.html">Multimedia 2</a></li>
         </li>
         </ul>
-       	<li><a class="menu" href="actividades.html">Actividades</a>        
+       	<li><a class="menu" style="color:#005883" href="actividades.html">Actividades</a>        
 			<ul>
 			<li><a style="color:#FFF" class="menu" href="actividad1.html">Actividad 1</a></li>
 			<li><a style="color:#FFF" class="menu" href="actividad2.html">Actividad 2</a></li>
@@ -47,7 +45,7 @@
         
 
         
-        <li><a class="menu" href="autores.html">Autores</a></li>
+        <li><a class="menu" style="color:#005883" href="autores.html">Autores</a></li>
         </ul>
 
 
