--- a/index.html
+++ b/index.html
@@ -59,14 +59,14 @@
     </article>
 	<article>
     	<h2> Objetivos</h2>
-    	<p> <b>Objetivo general:</b><br> 
-		Exponer los modelos de programación orientada a objetos.
+    	<p> <b>Objetivo general:</b><br> <br>
+		Exponer los modelos de programación orientada a objetos.<br><br><br>
 
-		<b>Objetivo específico 1: </b><br>
+		<b>Objetivo específico 1: </b><br><br>
 		Conocer la estructura básica de un sitio web y aplicarlo para dar a conocer los modelos de programación orientada a objetos. <br><br>
-		<b>Objetivo específico 2: </b><br>
+		<b>Objetivo específico 2: </b><br><br>
 		Reconocer cada elemento dentro de la estructura básica de HTML5.<br><br>
-		<b>Objetivo específico 3: </b><br>
+		<b>Objetivo específico 3: </b><br><br>
 		Explicar los modelos de programación orientada a objetos como lo son: burbuja, inserción y selección.
 		</p>
    	</article>
