--- a/index.html
+++ b/index.html
@@ -56,6 +56,7 @@
 <section style="background-color:#F0B429">
 	<article>
     <h1 style="font-size:24px"> Descripción de los métodos de ordenación utilizando programación orientada a objetos </h1>
+    <img class="imagenes" style="width: 400px; height: 300px " src="images/inicio.jpg">
     </article>
 	<article>
     	<h2> Objetivos</h2>
@@ -83,7 +84,7 @@
 
 
 
-<h3> Página Web creada por el Grupo 21 del curso de Diseño de Sitios Web. </h3>
+<h3> Página Web creada por Silvia Daniela Sierra - Grupo 21 del curso de Diseño de Sitios Web. </h3>
 
 <div class="contador" id="sfcd9dncxfh4kyy2rgyfph5szu9msjfqbmu"></div><script type="text/javascript" src="https://counter8.freecounter.ovh/private/counter.js?c=d9dncxfh4kyy2rgyfph5szu9msjfqbmu&down=async" async></script><noscript><a href="https://www.contadorvisitasgratis.com" title="contador de visitas"><img src="https://counter8.freecounter.ovh/private/contadorvisitasgratis.php?c=d9dncxfh4kyy2rgyfph5szu9msjfqbmu" border="0" title="contador de visitas" alt="contador de visitas"></a></noscript>
 </center>
