--- a/lecturas.html
+++ b/lecturas.html
@@ -56,32 +56,33 @@
 
 <center>
 <section class="autor">
-	<article>
-    <h1> Lecturas:</h1>
-    	<h2> Lectura 1</h2><br>
-    	<img src="" alt="" width="" height=""><br>
-    	<p>  </p>
+	
+    <article>
+    <h1> Introducción a los métodos de ordenación utilizando programación orientada a objetos:</h1>
+
+    <br>
+    <p style="width: 800px">Mediante las estructuras de datos se almacena información, que es recuperada de forma eficiente a través de los métodos de ordenación. Los métodos de ordenación que existen son:<br>
+-   Burbuja<br>
+-   Inserción<br>
+-   Selección<br>
+</p><br>
+
+    	<h2> Método de ordenación Burbuja</h2><br>
+    	<img src="images/burbuj.jpg" style="width: 500px; height: 200px" ><br>
+    	<p> El método burbuja opera de manera que se acomoda el vector iniciando desde la primera casilla y desplazando el número mayor hasta acomodarlo en la última casilla, luego de tener acomodado el número más grande en la última posición, se continúa realizando el mismo proceso desde la primera casilla, comparando y encontrando el siguiente número más grande desde la primera casilla para desplazarlo a la penúltima casilla, de manera que los números se vayan ubicando de manera ordenada en el vector. <br>Este algoritmo es muy usado en todos los lenguajes de programación.
+ </p>
     </article>
     <article>
-    	<h2> Lectura 2</h2>
-    	<img src="" alt="">
-    	<p> </p>
+    	<h2> Método de Ordenación por Inserción</h2>
+    	<img src="images/insercion.jpg" style="width: 150px; height: 250px"><br>
+    	<p> El método de ordenación por inserción opera de manera que al empezar se tiene un solo elemento, el cual es un conjunto ordenado. Luego, cuando hay n elementos ordenados ascendentemente, se toma el elemento k+1 para compararlo con los elementos ordenados previamente, de manera que al encontrar un elemento menor o no encontrar elementos, se detenga y sea insertado de manera que desplace hacia la derecha a todos los demás elementos mayores que el mismo. </p>
     </article>
     <article>
-    	<h2> Lectura 3</h2>
-    	<img src="" alt="">
-    	<p> </p>
+    	<h2> Método de Ordenación por Selección</h2>
+    	<img src="images/seleccion.jpg" style="width: 500px; height: 250px"><br>
+    	<p>El método de ordenación por selección opera de manera que se requieren O(n^2) de operaciones para ordenar n elementos de una lista. Dicho de otra forma, este método consiste en buscar el número menor de la lista, realizar el intercambio con el que se encuentra en la primera posición, luego buscar el número menor de entre los números restantes en la lista para intercambiarlo con el número que se encuentra en la segunda posición y así con cada número hasta que la lista quede totalmente ordenada. </p>
     </article>
-    <article>
-    	<h2> Lectura 4</h2>
-    	<img src="" alt="">
-    	<p> </p>
-    </article>
-    <article>
-    	<h2> Lectura 5</h2>
-    	<img src="" alt="">
-    	<p> </p>
-    </article>
+    
 </section>
 </center>
 
@@ -89,8 +90,7 @@
 <center>
 
 
-
-<h3> Página Web creada por el Grupo 21 del curso de Diseño de Sitios Web. </h3>
+<h3> Página Web creada por Silvia Daniela Sierra - Grupo 21 del curso de Diseño de Sitios Web. </h3>
 
 <div class="contador" id="sfcd9dncxfh4kyy2rgyfph5szu9msjfqbmu"></div><script type="text/javascript" src="https://counter8.freecounter.ovh/private/counter.js?c=d9dncxfh4kyy2rgyfph5szu9msjfqbmu&down=async" async></script><noscript><a href="https://www.contadorvisitasgratis.com" title="contador de visitas"><img src="https://counter8.freecounter.ovh/private/contadorvisitasgratis.php?c=d9dncxfh4kyy2rgyfph5szu9msjfqbmu" border="0" title="contador de visitas" alt="contador de visitas"></a></noscript>
 </center>
