--- a/actividad3.html
+++ b/actividad3.html
@@ -22,7 +22,8 @@
 
 <header>
 <h1> Sitio Web - OVI </h1>
-<h2>Silvia Daniela Sierra</h2>
+<h2> Silvia Daniela Sierra </h2>
+
 </header>
 
 <nav>
@@ -32,8 +33,9 @@
        	<li><a class="menu" href="lecturas.html">Lecturas</a></li>
        	<li><a class="menu" style="color:#005883" href="multimedia.html">Multimedia</a>
         <ul>
-			<li><a class="menu" href="multimedia1.html">Multimedia 1</a></li>
-			<li><a class="menu" href="multimedia2.html">Multimedia 2</a></li>
+			<li><a style="color:#FFF" class="menu" href="multimedia1.html">Multimedia 1</a></li>
+			<li><a style="color:#FFF" class="menu" href="multimedia2.html">Multimedia 2</a></li>
+            <li><a style="color:#FFF" class="menu" href="multimedia3.html">Multimedia 3</a></li>
         </li>
         </ul>
        	<li><a class="menu" href="actividades.html">Actividades</a>        
@@ -51,11 +53,13 @@
 
 
 </nav>
+
+
 <center>
 <section class="autor">
-	<article>
-    <h1 style="font-size:36px"> Actividad 3:</h1>
-    	
+	
+    <article>
+        <h1>Actividad 3</h1><br>
     	<h2> <a style="color:#FFF" href="actividad1.html">Actividad 1</a> </h2>
     	<img src="" alt="">
     	<p> </p>
@@ -71,13 +75,13 @@
 <center>
 
 
-
-<h3> Página Web creada por el Grupo 21 del curso de Diseño de Sitios Web. </h3>
+<h3> Página Web creada por Silvia Daniela Sierra - Grupo 21 del curso de Diseño de Sitios Web. </h3>
 
 <div class="contador" id="sfcd9dncxfh4kyy2rgyfph5szu9msjfqbmu"></div><script type="text/javascript" src="https://counter8.freecounter.ovh/private/counter.js?c=d9dncxfh4kyy2rgyfph5szu9msjfqbmu&down=async" async></script><noscript><a href="https://www.contadorvisitasgratis.com" title="contador de visitas"><img src="https://counter8.freecounter.ovh/private/contadorvisitasgratis.php?c=d9dncxfh4kyy2rgyfph5szu9msjfqbmu" border="0" title="contador de visitas" alt="contador de visitas"></a></noscript>
 </center>
 
 </footer>
+
 
 </div>
 </body>
