--- a/autores.html
+++ b/autores.html
@@ -35,6 +35,7 @@
         <ul>
 			<li><a style="color:#FFF" class="menu" href="multimedia1.html">Multimedia 1</a></li>
 			<li><a style="color:#FFF" class="menu" href="multimedia2.html">Multimedia 2</a></li>
+            <li><a style="color:#FFF" class="menu" href="multimedia3.html">Multimedia 3</a></li>
         </li>
         </ul>
        	<li><a class="menu" href="actividades.html">Actividades</a>        
@@ -71,7 +72,7 @@
 
 
 
-<h3> Página Web creada por el Grupo 21 del curso de Diseño de Sitios Web. </h3>
+<h3> Página Web creada por Silvia Daniela Sierra - Grupo 21 del curso de Diseño de Sitios Web. </h3>
 
 <div class="contador" id="sfcd9dncxfh4kyy2rgyfph5szu9msjfqbmu"></div><script type="text/javascript" src="https://counter8.freecounter.ovh/private/counter.js?c=d9dncxfh4kyy2rgyfph5szu9msjfqbmu&down=async" async></script><noscript><a href="https://www.contadorvisitasgratis.com" title="contador de visitas"><img src="https://counter8.freecounter.ovh/private/contadorvisitasgratis.php?c=d9dncxfh4kyy2rgyfph5szu9msjfqbmu" border="0" title="contador de visitas" alt="contador de visitas"></a></noscript>
 </center>
