--- a/lecturas.html
+++ b/lecturas.html
@@ -35,6 +35,7 @@
         <ul>
 			<li><a style="color:#FFF" class="menu" href="multimedia1.html">Multimedia 1</a></li>
 			<li><a style="color:#FFF" class="menu" href="multimedia2.html">Multimedia 2</a></li>
+            <li><a style="color:#FFF" class="menu" href="multimedia3.html">Multimedia 3</a></li>
         </li>
         </ul>
        	<li><a class="menu" href="actividades.html">Actividades</a>        
