--- a/multimedia1.html
+++ b/multimedia1.html
@@ -35,6 +35,7 @@
         <ul>
 			<li><a style="color:#FFF" class="menu" href="multimedia1.html">Multimedia 1</a></li>
 			<li><a style="color:#FFF" class="menu" href="multimedia2.html">Multimedia 2</a></li>
+            <li><a style="color:#FFF" class="menu" href="multimedia3.html">Multimedia 3</a></li>
         </li>
         </ul>
        	<li><a class="menu" href="actividades.html">Actividades</a>        
@@ -55,10 +56,15 @@
 <center>
 <section class="autor">
 	<article>
-    <h1 style="font-size:36px"> Multimedia 1:</h1>
+    <h1 style="font-size:36px"> Recurso 1:</h1>
     	
-    <article>
-    	<h2> <a style="color:#FFF" href="multimedia2.html">Multimedia 2</a></h2>
+        <p><b>Método de Ordenamiento Burbuja</b></p>
+        <p>Rosado, J. (2012). Metodo de Ordenamiento Burbuja [Vídeo]. Disponible en:<br> https://www.youtube.com/watch?v=uiiss0hP8xM</p>
+        <iframe width="560" height="315" src="https://www.youtube.com/embed/uiiss0hP8xM" frameborder="0" allowfullscreen></iframe>
+    <article><br><br>
+
+    	<h3> <a style="color:#FFF" href="multimedia2.html">Recurso 2</a></h3>
+        <h3> <a style="color:#FFF" href="multimedia3.html">Recurso 3</a></h3>
     	<img src="" alt="">
     	<p> </p>
     </article>
@@ -69,7 +75,7 @@
 
 
 
-<h3> Página Web creada por el Grupo 21 del curso de Diseño de Sitios Web. </h3>
+<h3> Página Web creada por Silvia Daniela Sierra - Grupo 21 del curso de Diseño de Sitios Web. </h3>
 
 <div class="contador" id="sfcd9dncxfh4kyy2rgyfph5szu9msjfqbmu"></div><script type="text/javascript" src="https://counter8.freecounter.ovh/private/counter.js?c=d9dncxfh4kyy2rgyfph5szu9msjfqbmu&down=async" async></script><noscript><a href="https://www.contadorvisitasgratis.com" title="contador de visitas"><img src="https://counter8.freecounter.ovh/private/contadorvisitasgratis.php?c=d9dncxfh4kyy2rgyfph5szu9msjfqbmu" border="0" title="contador de visitas" alt="contador de visitas"></a></noscript>
 </center>
