--- a/multimedia3.html
+++ b/multimedia3.html
@@ -8,7 +8,7 @@
 <meta content="Daniela Sierra" name="author">
 <meta content="unad, OVI, web" name="keywords">
 
-<title>Sitio Web OVI - Actividad 2</title>
+<title>Sitio Web OVI - Multimedia 3</title>
 <link rel="stylesheet" href="css/normalize.css">
 <link rel="stylesheet" href="css/styles.css">
 
@@ -22,7 +22,7 @@
 
 <header>
 <h1> Sitio Web - OVI </h1>
-<h2> Silvia Daniela Sierra </h2>
+<h2>Silvia Daniela Sierra</h2>
 
 </header>
 
@@ -53,19 +53,18 @@
 
 
 </nav>
-
-
 <center>
 <section class="autor">
-	
-    <article>
-        <h1>Actividad 2</h1><br>
-    	<h2> <a style="color:#FFF" href="actividad1.html">Actividad 1</a> </h2>
-    	<img src="" alt="">
-    	<p> </p>
-    </article>
-    <article>
-    	<h2> <a style="color:#FFF" href="actividad3.html">Actividad 3</a></h2>
+	<article>
+    <h1 style="font-size:36px"> Recurso 3:</h1>
+    	
+        <p><b>Método de Ordenamiento por Selección</b></p>
+        <p>Condori, S. (2011). 6.2 Ordenamiento por Selección [Vídeo]. Disponible en:<br> https://www.youtube.com/watch?v=KCvr7eHXEHE</p>
+        <iframe width="560" height="315" src="https://www.youtube.com/embed/KCvr7eHXEHE" frameborder="0" allowfullscreen></iframe>
+    <article><br><br>
+
+    	<h3> <a style="color:#FFF" href="multimedia1.html">Recurso 1</a></h3>
+        <h3> <a style="color:#FFF" href="multimedia2.html">Recurso 2</a></h3>
     	<img src="" alt="">
     	<p> </p>
     </article>
@@ -75,13 +74,13 @@
 <center>
 
 
+
 <h3> Página Web creada por Silvia Daniela Sierra - Grupo 21 del curso de Diseño de Sitios Web. </h3>
 
 <div class="contador" id="sfcd9dncxfh4kyy2rgyfph5szu9msjfqbmu"></div><script type="text/javascript" src="https://counter8.freecounter.ovh/private/counter.js?c=d9dncxfh4kyy2rgyfph5szu9msjfqbmu&down=async" async></script><noscript><a href="https://www.contadorvisitasgratis.com" title="contador de visitas"><img src="https://counter8.freecounter.ovh/private/contadorvisitasgratis.php?c=d9dncxfh4kyy2rgyfph5szu9msjfqbmu" border="0" title="contador de visitas" alt="contador de visitas"></a></noscript>
 </center>
 
 </footer>
-
 
 </div>
 </body>
